Refactor project structure and enhance database connection handling
- Removed obsolete files related to Oracle database operations, including SQL scripts and Docker configurations.
- Introduced new classes for MySQL, Oracle, Postgres, and SQL Server connections, enhancing the database connection framework.
- Updated `pom.xml` to reflect changes in dependencies and project structure.
- Improved the `UnifiedDatabaseRunner` and related classes for better error handling and result processing.
- Cleaned up the README to provide clearer instructions and reflect the updated project structure.