@@ -1,10 +1,10 @@
 package com.example.shelldemo.util;
 
-import com.example.shelldemo.model.ConnectionConfig;
-import com.example.shelldemo.model.DatabaseResult;
+import com.example.shelldemo.UnifiedDatabaseOperation;
 import com.example.shelldemo.config.OracleConnectionGenerator;
 import com.example.shelldemo.config.YamlConfigReader;
-import com.example.shelldemo.datasource.UnifiedDatabaseOperation;
+import com.example.shelldemo.model.domain.ConnectionConfig;
+import com.example.shelldemo.model.domain.DatabaseResult;
 import com.fasterxml.jackson.core.type.TypeReference;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -15,24 +15,24 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 
 public class DbLogin {
     private static final Logger logger = LogManager.getLogger(DbLogin.class);
     private static final String DEFAULT_CONFIG_PATH = "application.yaml";
     private static final String DB_LIST_PATH = "dblist.yaml";
     private static final int DEFAULT_THREAD_COUNT = 10;
+    private static final String UNKNOWN = "unknown";
     
     private final YamlConfigReader configReader;
     private final OracleConnectionGenerator connectionGenerator;
     private final int threadCount;
 
-    public DbLogin() {
+    public DbLogin() throws IOException {
         this(DEFAULT_THREAD_COUNT);
     }
 
-    public DbLogin(int threadCount) {
-        this.configReader = new YamlConfigReader();
+    public DbLogin(int threadCount) throws IOException {
+        this.configReader = new YamlConfigReader(DEFAULT_CONFIG_PATH);
         this.connectionGenerator = new OracleConnectionGenerator();
         this.threadCount = threadCount;
     }
@@ -41,29 +41,36 @@ public class DbLogin {
         logger.info("Starting database tests with {} virtual threads", threadCount);
         
         // Read LDAP configuration
-        Map<String, Object> config = configReader.readConfig(DEFAULT_CONFIG_PATH, new TypeReference<Map<String, Object>>() {});
-        Map<String, Object> ldapConfig = configReader.convertValue(config.get("ldap"), new TypeReference<Map<String, Object>>() {});
+        Map<String, Object> config = configReader.readConfig(DEFAULT_CONFIG_PATH, new TypeReference<>() {
+        });
+        Map<String, Object> ldapConfig = configReader.convertValue(config.get("ldap"), new TypeReference<>() {
+        });
         
         // Read database list
-        Map<String, Object> dbList = configReader.readConfig(DB_LIST_PATH, new TypeReference<Map<String, Object>>() {});
-        List<Map<String, String>> databases = configReader.convertValue(dbList.get("databases"), new TypeReference<List<Map<String, String>>>() {});
+        Map<String, Object> dbList = configReader.readConfig(DB_LIST_PATH, new TypeReference<>() {
+        });
+        List<Map<String, String>> databases = configReader.convertValue(dbList.get("databases"), new TypeReference<>() {
+        });
 
         // Create virtual thread executor
         try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
             List<DatabaseResult> results = databases.stream()
                 .map(db -> executor.submit(() -> testDatabase(db, ldapConfig)))
-                .collect(Collectors.toList())
+                .toList()
                 .stream()
                 .map(future -> {
                     try {
                         return future.get();
+                    } catch (InterruptedException e) {
+                        Thread.currentThread().interrupt();
+                        logger.error("Database test interrupted", e);
+                        return new DatabaseResult(UNKNOWN, UNKNOWN, false);
                     } catch (Exception e) {
                         logger.error("Error executing database test", e);
-                        return new DatabaseResult("unknown", "unknown", false);
+                        return new DatabaseResult(UNKNOWN, UNKNOWN, false);
                     }
                 })
-                .collect(Collectors.toList());
-
+                .toList();
             // Write results to CSV
             writeResultsToCsv(results, outputFile);
         }
@@ -101,10 +108,7 @@ public class DbLogin {
         try (FileWriter writer = new FileWriter(outputFile)) {
             writer.write("Database,ServiceName,Status\n");
             for (DatabaseResult result : results) {
-                writer.write(String.format("%s,%s,%s\n",
-                    result.getDatabaseName(),
-                    result.getServiceName(),
-                    result.isSuccess() ? "PASS" : "FAIL"));
+                writer.write(result.getDatabaseName() + "," + result.getServiceName() + "," + (result.isSuccess() ? "PASS" : "FAIL") + "\n");
             }
         }
     }
